plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'dmu'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'

	//google smtp
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'

	//JavaMailSender
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//jasypt
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot:3.0.4'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'

	//mysql
	implementation 'com.mysql:mysql-connector-j'

	//spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//jwt
	implementation "io.jsonwebtoken:jjwt:0.9.1"

	//oauth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//feign
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'

	//s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	//aop
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.5.5'

	//queryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//datatype
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	//firebase cloud messaging
	implementation 'com.google.firebase:firebase-admin:9.2.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "-Xlint:deprecation"
}